[project]
name = "microshop"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Vadim Kuzmin",email = "investorprof@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

